Fixed: Keyboard startup Android bug. Fixed: Mobile apps offline syncing issues. Fixed: Chrome bug where height jumps on open.

--- a/platform/chrome/css/platform.scss
+++ b/platform/chrome/css/platform.scss
@@ -1,3 +1,11 @@
+.container {
+    display: none;
+
+    &.done-loading {
+        display: block;
+    }
+}
+
 .view {
     width: 320px;
     height: 480px;
